[package]
name = "open_lights_core"
version = "0.0.1"
authors = ["QPCrummer"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]

# Gui Dependencies
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders", "serde"] }
image = { version = "0.25.1", default-features = false, features = [
    "jpeg",
    "png",
] }
eframe = { version = "0.28.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Serializing Dependencies
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }

# Logging Dependencies
log = "0.4.22"

# Audio Dependencies
rodio = {git = "https://github.com/RustAudio/rodio.git"}
lofty = "0.20.1"
hound = "3.5.1"
once_cell = "1.19.0"

# Random Dependencies
fastrand = "2.1.0"

# File Utility Dependencies
walkdir = "2.5.0"

# Bluetooth
bluez-async = "0.7.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }

#GPIO Dependencies
[target.'cfg(target_arch = "arm64")'.dependencies]
rppal = "0.18.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
