[package]
name = "open_lights_core"
version = "1.0.0-pre.2"
authors = ["QPCrummer"]
edition = "2021"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]

[dependencies]

# Gui Dependencies
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["image"] }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

# Serializing Dependencies
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }

# Audio Dependencies
rodio = {git = "https://github.com/RustAudio/rodio.git"}
lofty = "0.21.1"
hound = "3.5.1"
once_cell = "1.20.2"

# Random Dependencies
fastrand = "2.2.0"

# File Utility Dependencies
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
# Bluetooth
bluez-async = "0.7.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
#GPIO Dependencies
rppal = "0.19.0"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
